--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "noticiazap-backend",
   "version": "1.0.0",
-  "description": "Backend do NotíciaZap - agregador de notícias via RSS",
+  "description": "Backend do NotíciaZap - agregador de notícias",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "rss-parser": "^3.12.0"
+    "rss-parser": "^3.12.0",
+    "cors": "^2.8.5"
   }
 }
